# bill-parser

./: .gitignore  api_entites.py  app.py  entities.py  extract_merged_bill.py  extract_single_bill.py  extraction.py  main.ipynb  main.py  model_entities.py  pyproject.toml  streamlit_app.py  temp.json  test_main.py  workflow.py
tests/: expected_results.json
