[project]
name = "bill-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "mistralai>=1.9.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
]
